--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Tech It Easy Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h1>Tech It Easy</h1>
+<span id="tv-sold"></span>
+<span id="tv-stock"> </span>
+<span id="tv-expected"></span>
+<ol id="tv-merken"></ol>
+<span id="single-tv"></span>
+<ul id="inventory-models"></ul>
 
+<div id ="button-section">
+    <button name="button1" id="button-sorteren">Sorteer op prijs</button>
+    <br><br>
+    <button name="button2" id="button-ambilight">AmbiLight TV's</button>
+    <br><br>
+    <button name="button3" id="button-uitverkocht">Uitverkochte exemplaren</button>
+
+</div>
+
+
+<script src="main.js"></script>
+<script src="opdracht1.js"></script>
+<script src="opdracht2.js"></script>
+<script src="opdracht3.js"></script>
+<script src="opdracht4.js"></script>
 </body>
 </html>
